[package]
name = "STFSproof"
version = "0.1.1"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }